# clTEM

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  simulationthread.cpp  simulationthread.h
simulation/: CMakeLists.txt  ccdparams.cpp  clmanager.cpp  clmanager.h  kernels.cpp  kernels.h  simulationjob.cpp  simulationmanager.cpp  simulationmanager.h  simulationrunner.cpp  simulationrunner.h  simulationworker.cpp  simulationworker.h  threadpool.cpp  threadpool.h  threadworker.cpp
simulation/clwrapper/: CMakeLists.txt  auto.h  cldevice.cpp  cldevice.h  clfourier.h  clkernel.h  clmemory.h  clstatic.cpp  clstatic.h  manual.h  notify.h  utils.cpp
simulation/structure/: atom.h  crystalstructure.cpp  crystalstructure.h  structureparameters.cpp  structureparameters.h
simulation/utilities/: commonstructs.cpp  commonstructs.h  fileio.cpp  fileio.h  jsonutils.cpp  jsonutils.h  stringutils.cpp  stringutils.h  structureutils.h
src/: CMakeLists.txt
src/console/: CMakeLists.txt  main.cpp  parseopencl.h
src/gui/: CMakeLists.txt  cltem.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  simulationthread.cpp  simulationthread.h  test-style.qss
src/gui/cmake/modules/: FindQCustomPlot.cmake
src/gui/controls/: borderlessdialog.cpp  borderlessdialog.h  borderlesswindow.cpp  borderlesswindow.h  editunitsbox.cpp  editunitsbox.h  flattitlebar.cpp  flattitlebar.h  hovercombobox.h  imagetab.cpp  imagetab.h  imagetab.ui  nthunitsbox.cpp  nthunitsbox.h  statuslayout.cpp  statuslayout.h  statuslayout.ui  tabpanel.cpp  tabpanel.h  tabpanelbar.cpp  tabpanelbar.h
src/gui/controls/glplot/: CMakeLists.txt  arraybuffer.cpp  arraybuffer.h  attributebuffer.cpp  attributebuffer.h  camera.cpp  camera.h  camerapipeline.cpp  camerapipeline.h  error.cpp  error.h  framebuffer.cpp  framebuffer.h  oglmaths.cpp  oglmaths.h  plotwidget.cpp  plotwidget.h  static.cpp  static.h
src/gui/controls/glplot/shaders/: rectangle.fs  scatter.gs  scatter.vs  shaders.qrc
src/gui/controls/glplot/techniques/: rectangleshader.cpp  rectangleshader.h  rectangletechnique.cpp  rectangletechnique.h  scattershader.cpp  scattershader.h  scattertechnique.cpp  scattertechnique.h  shader.cpp  shader.h  shaderresource.h  technique.cpp  technique.h
src/gui/controls/imageplot/: imageplotwidget.cpp  imageplotwidget.h
src/gui/controls/oglviewwidget/: CMakeLists.txt  oglarraybuffer.cpp  oglarraybuffer.h  oglattributebuffer.cpp  oglattributebuffer.h  oglbillboardtechnique.cpp  oglbillboardtechnique.h  oglcamera.cpp  oglcamera.h  oglcamerapipeline.cpp  oglcamerapipeline.h  ogldefines.cpp  ogldefines.h  oglmaths.cpp  oglmaths.h  oglrectangletechnique.cpp  oglrectangletechnique.h  oglstatic.cpp  oglstatic.h  ogltechnique.cpp  ogltechnique.h  ogltexture.cpp  ogltexture.h  oglutils.cpp  oglutils.h  oglvertexbuffer.cpp  oglvertexbuffer.h  oglviewwidget.cpp  oglviewwidget.h
src/gui/controls/oglviewwidget/shaders/: billboard.fs  billboard.gs  billboard.vs  rectangle.fs  rectangle.vs  shaders.qrc
src/gui/dialogs/settings/: settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
src/gui/dialogs/settings/frames/: arealayoutframe.cpp  (+41 more)
src/gui/frames/: aberrationframe.cpp  aberrationframe.h  aberrationframe.ui  cbedframe.cpp  cbedframe.h  cbedframe.ui  incoherenceframe.cpp  incoherenceframe.h  incoherenceframe.ui  inelasticframe.cpp  inelasticframe.h  inelasticframe.ui  simulationframe.cpp  simulationframe.h  simulationframe.ui  sourceframe.cpp  sourceframe.h  sourceframe.ui  stemframe.cpp  stemframe.h  stemframe.ui  temframe.cpp  temframe.h  temframe.ui
src/gui/theme/: abstractnativeeventfilter.cpp  abstractnativeeventfilter.h  default-theme.qss  flat-theme.qss  native-dark.qss  theme.qrc  thememanager.cpp  thememanager.h
src/gui/utils/: guiutils.cpp  guiutils.h  rangevalidator.cpp  rangevalidator.h  stringutils.cpp  stringutils.h
src/simulation/: CMakeLists.txt  ccdparams.cpp  ccdparams.h  clmanager.h  kernels.cpp  kernels.h  simulationjob.h  simulationmanager.cpp  simulationmanager.h  simulationrunner.cpp  simulationrunner.h  simulationworker.cpp  simulationworker.h  threadpool.cpp  threadpool.h  threadworker.cpp  threadworker.h  version.cpp
src/simulation/cif/: CMakeLists.txt  README.md  atomsite.cpp  atomsite.h  cellgeometry.cpp  cellgeometry.h  cifreader.cpp  cifreader.h  cifutilities.cpp  cifutilities.h  supercell.cpp  supercell.h  symmetryoperation.cpp  symmetryoperation.h  unitcell.h
src/simulation/clwrapper/: CMakeLists.txt  auto.h  clcontext.h  cldevice.cpp  cldevice.h  clerror.cpp  clerror.h  clevent.h  clfourier.cpp  clfourier.h  clkernel.cpp  clkernel.h  clmemory.h  clstatic.cpp  clstatic.h  clworkgroup.h  clwrapper.h  manual.h  notify.h  utils.h
src/simulation/cmake/: version.cmake
src/simulation/cmake/modules/: FindEASYLOGGINGPP.cmake  FindModernJson.cmake
src/simulation/incoherence/: chromaticaberration.cpp  chromaticaberration.h  incoherenteffects.cpp  incoherenteffects.h  probesourcesize.cpp  probesourcesize.h
src/simulation/incoherence/inelastic/: phonon.cpp  phonon.h  plasmon.cpp  plasmon.h
src/simulation/inelastic/: inelastic.cpp  inelastic.h  phonon.cpp  phonon.h  plasmon.cpp  plasmon.h
src/simulation/microscope/: README.md  simulationcbed.cpp  simulationcbed.h  simulationctem.cpp  simulationctem.h  simulationgeneral.cpp  simulationgeneral.h  simulationstem.cpp  simulationstem.h  simulationworker.cpp  simulationworker.h
src/simulation/structure/: atom.h  crystalstructure.cpp  crystalstructure.h  plasmons.cpp  plasmons.h  simulationcell.cpp  simulationcell.h  structureparameters.cpp  structureparameters.h  thermalvibrations.cpp  thermalvibrations.h
src/simulation/threading/: simulationjob.h  simulationrunner.cpp  threadpool.cpp  threadpool.h
src/simulation/utilities/: commonstructs.cpp  commonstructs.h  enums.h  fileio.cpp  fileio.h  getversion.cpp  getversion.h  jsonutils.cpp  jsonutils.h  logging.cpp  logging.h  simutils.cpp  simutils.h  stringutils.cpp  stringutils.h  structureutils.cpp  structureutils.h  vectorutils.cpp  vectorutils.h
(+134 files in other folders)
